Actualicé menú de navegación y contenido de Perfil Profesional

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#Acerca-de-mi">Perfil Profesional</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#Mis-trabajos">Trabajos</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#Contacto">Contacto</a>
+    </li>
+</ul>
 
-                </ul>
 
             </div>
         </div>
@@ -52,58 +52,46 @@
                 <p class="my-5 fs-4">Desarrollador Web Frontend | Apasionado por el diseño limpio y funcional</p>
 
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <a href="#Mis-trabajos" class="btn btn-lg btn-outline-info text-light me-4">Trabajos</a>
+    <a href="#Contacto" class="btn btn-lg btn-info text-light">Contacto</a>
                 </div>
             </div>
         </div>
     </header>
 
 
-    <section id="Acerca-de-mi" class="container text-center my-5">
+<section id="Acerca-de-mi" class="container text-center my-5">
+    <h2 class="display-3 fw-bold my-4">Perfil Profesional</h2>
 
+    <p class="my-4">
+        Desarrollador frontend con conocimientos en <strong>HTML, CSS, JavaScript y Bootstrap</strong>. Me enfoco en crear sitios funcionales y atractivos visualmente, con especial atención al diseño limpio, la usabilidad y la mejora continua.
+    </p>
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
-
-        <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
-        </p>
-
-
-        <div class="row">
-            <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
-                <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                </p>
-            </div>
-            <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
-                <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                </p>
-            </div>
-            <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
-                <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                </p>
-            </div>
+    <div class="row">
+        <div class="col-12 col-md-4">
+            <i class="fas fa-laptop-code fa-3x my-3"></i>
+            <h3 class="my-3 fw-bold">Tecnologías</h3>
+            <p class="my-3">
+                HTML5, CSS3, JavaScript (ES6+), Bootstrap, Git y GitHub. Familiaridad con terminal, control de versiones y herramientas modernas de desarrollo frontend.
+            </p>
         </div>
-    </section>
+        <div class="col-12 col-md-4">
+            <i class="fas fa-tasks fa-3x my-3"></i>
+            <h3 class="my-3 fw-bold">Proyectos</h3>
+            <p class="my-3">
+                Participación en proyectos personales y desafíos prácticos donde aplico buenas prácticas de desarrollo, estructura semántica, diseño responsivo y optimización visual.
+            </p>
+        </div>
+        <div class="col-12 col-md-4">
+            <i class="fas fa-user-graduate fa-3x my-3"></i>
+            <h3 class="my-3 fw-bold">Formación</h3>
+            <p class="my-3">
+                Estudiante del programa de Desarrollo Web en Desafío Latam. Complemento mi aprendizaje con práctica constante, documentación y proyectos reales.
+            </p>
+        </div>
+    </div>
+</section>
+
 
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
