--- a/index.html
+++ b/index.html
@@ -140,43 +140,41 @@
 
 
     <section id="Contacto" class="container my-5">
+    <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+    <p class="text-center my-4 d-none d-md-block">
+        ¿Tienes alguna propuesta, colaboración o simplemente quieres saludar? Completa el formulario y estaré encantado de responderte.
+    </p>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+    <form>
+        <div class="form-group mb-4">
+            <label class="mb-2 fw-bold">Nombre completo</label>
+            <input class="form-control" placeholder="Ej: Fabián Armijo">
+        </div>
 
-        <form>
+        <div class="form-group mb-4">
+            <label class="mb-2 fw-bold">Correo electrónico</label>
+            <input class="form-control" type="email" placeholder="Ej: fabian@email.com">
+        </div>
 
+        <div class="form-group mb-4">
+            <label class="mb-2 fw-bold">Asunto</label>
+            <input class="form-control" placeholder="¿Sobre qué quieres hablar?">
+        </div>
 
-            <div class="form-group mb-4">
-                <label class="mb-2">Nombre</label>
-                <input class="form-control" placeholder="Nombre">
-            </div>
+        <div class="form-group mb-4">
+            <label class="mb-2 fw-bold">Mensaje</label>
+            <textarea class="form-control" rows="4" placeholder="Escribe aquí tu mensaje"></textarea>
+        </div>
 
-            <div class="form-group mb-4">
-                <label class="mb-2">Correo electrónico</label>
-                <input class="form-control" placeholder="Correo electrónico" />
-            </div>
+        <div class="text-end">
+            <button class="btn btn-info text-light">
+                <i class="fas fa-paper-plane"></i> Enviar
+            </button>
+        </div>
+    </form>
+</section>
 
-
-            <div class="form-group">
-                <label class="mb-2">Mensaje</label>
-                <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
-            </div>
-
-            <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
-            </div>
-
-
-
-        </form>
-
-    </section>
 
 
 
